# mcp-amazon-sp-api

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml
src/mcp_amazon_sp_api/: config.py  helpers.py  server.py  sp_client.py  tool_docs.py
src/mcp_amazon_sp_api/clients/: __init__.py  aplus_content.py  base.py  catalog.py  competitor_analysis.py  feeds.py  fees.py  finances.py  fulfillment_inbound.py  inventory.py  invoices.py  listings.py  listings_restrictions.py  messaging.py  orders.py  pricing.py  pricing_cross.py  reports_base.py  reports_brand_analytics.py  reports_fba.py  reports_sales.py  sales.py  solicitations.py
src/mcp_amazon_sp_api/tools/: __init__.py  analysis.py  aplus_content.py  brand_analytics.py  catalog_orders.py  competitor_analysis.py  fba_inventory.py  feeds.py  fulfillment.py  inventory_realtime.py  invoices.py  listings.py  listings_restrictions.py  messaging.py  pricing.py  pricing_cross.py  reports.py  sales_api.py  sales_traffic.py  solicitations.py
tests/: conftest.py
tests/integration/: conftest.py  test_aplus.py  test_brand_analytics.py  test_catalog.py  test_competitor_analysis.py  test_fba.py  test_feeds.py  test_fees.py  test_finances.py  test_fulfillment_inbound.py  test_inventory.py  test_invoices.py  test_listings.py  test_listings_restrictions.py  test_messaging.py  test_orders.py  test_pricing.py  test_pricing_cross.py  test_reports_base.py  test_sales.py  test_sales_api.py  test_solicitations.py
tests/unit/: test_config.py
tests/unit/clients/: conftest.py  test_aplus_content.py  test_base.py  test_catalog.py  test_competitor_analysis.py  test_feeds.py  test_fees.py  test_finances.py  test_fulfillment_inbound.py  test_inventory.py  test_invoices.py  test_listings.py  test_listings_restrictions.py  test_messaging.py  test_orders.py  test_pricing.py  test_pricing_cross.py  test_reports_base.py  test_reports_brand_analytics.py  test_reports_fba.py  test_reports_sales.py  test_sales_api.py  test_solicitations.py
tests/unit/tools/: conftest.py  test_common.py  test_tools_aplus.py  test_tools_brand_analytics.py  test_tools_catalog.py  test_tools_fba.py  (+17 more)
