[project]
name = "mcp-amazon-sp-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.26.0",
    "python-amazon-sp-api>=2.1.8",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[project.scripts]
mcp-amazon-sp-api = "mcp_amazon_sp_api.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests que requieren credenciales reales de SP-API",
]
