[project]
name = "mcp-amazon-sp-api"
version = "0.1.0"
description = "MCP server exposing Amazon Selling Partner API (SP-API) to Claude Desktop and other MCP clients."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Christian Ramos" },
]
keywords = ["mcp", "amazon", "sp-api", "selling-partner", "claude", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.27.1",
    "python-amazon-sp-api>=2.1.8",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mcp-amazon-sp-api = "mcp_amazon_sp_api.server:main"

[project.urls]
Homepage = "https://github.com/christian-ramos/mcp-amazon-sp-api"
Repository = "https://github.com/christian-ramos/mcp-amazon-sp-api"
Issues = "https://github.com/christian-ramos/mcp-amazon-sp-api/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_amazon_sp_api"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=6.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests que requieren credenciales reales de SP-API",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]
